--- a/MainBody/conclusions.tex
+++ b/MainBody/conclusions.tex
@@ -4,4 +4,4 @@ Existing solutions to the problem of video to audio conversion for the blind hav
 
 A functional system allowing a blind person to navigate a room has been developed, which addresses some of the concerns raised with existing solutions to the problem.
 
-The feasibility of a system allowing a more detailed view of shapes has been investigated, with initial prototypes for shape identification using various methods having been developed and evaluated. Although ideally more work in this area would have been done, given the size of the problem and (current) lack of domain-specific knowledge, I believe that a virtually unlimited amount of time could be devoted to this task if such an amount of time were available to me.
+The feasibility of a system allowing a more detailed view of shapes has been investigated, with initial prototypes for shape identification using various methods having been developed and evaluated. Although ideally more work in this area would have been done, given the size of the problem and my (current) lack of domain-specific knowledge, I believe that a virtually unlimited amount of time could be devoted to this task if such an amount of time were available to me.
