--- a/MainBody/future-work.tex
+++ b/MainBody/future-work.tex
@@ -9,7 +9,7 @@ As detail mode was seen as being the most difficult problem solve, it seems natu
 \subsection{Basis Shapes Selection}
 In order to continue the work on the basis-shapes proposition (of describing an unknown shape in terms of other, known shapes), research should be done into the optimal choice of basis shapes.
 
-The basis shapes used sections \ref{sec:eftbs} and \ref{sec:hubs} were fairly arbitrary choices --- the ideal basis shapes should be experimentally determined.
+The basis shapes used sections \ref{sec:eftbs} and were fairly arbitrary choices --- the ideal basis shapes should be experimentally determined.
 
 Additionally, for the sake of completeness, the basis-shape method should be trialled using Zernike Moments as descriptors.
 
