--- a/Support/abstract.tex
+++ b/Support/abstract.tex
@@ -1,7 +1,6 @@
-\begin{abstract}
-    This final year project report details possible methods of sonfifying video and depth data, with the view to allowing a blind person to navigate a room without any additional assistance.
+\subsection*{Abstract}
+This final year project report details possible methods of sonfifying video and depth data, with the view to allowing a blind person to navigate a room without any additional assistance.
 
-    The report also details and critically evaluates existing solutions to the problem of video to audio conversion, noting their shortcomings and pointing out areas in which they are successful. 
+The report also details and critically evaluates existing solutions to the problem of video to audio conversion, noting their shortcomings and pointing out areas in which they are successful. 
 
-    By means of an experimental approach, several prototype systems are explained and discussed. Relevant theory has been explained where deemed necessary --- including concepts relating to image segmentation, descriptor extraction, shape classification and tone generation.
-\end{abstract}
+By means of an experimental approach, several prototype systems are explained and discussed. Relevant theory has been explained where deemed necessary --- including concepts relating to image segmentation, descriptor extraction, shape classification and tone generation.
