--- a/Support/acknowledgements.tex
+++ b/Support/acknowledgements.tex
@@ -1,4 +1,2 @@
-\section*{Acknowledgements}
-\begin{center}
+\subsection*{Acknowledgements}
 Thanks to my supervisor Dr. Kirill Sidorov for his encouragement and support through this project.
-\end{center}
