--- a/references.bib
+++ b/references.bib
@@ -118,6 +118,14 @@ doi={10.1109/IEMBS.1994.412057},}
   urldate = {2015-04-27}
 }
 
+@online{openni,
+    author = {Occipital, Inc},
+    title = {OpenNI Home-page},
+    year = 2014,
+    urldate = {2015-05-05},
+    url = {http://structure.io/openni}
+}
+
 @online{matlabwrapper,
     title = {Matlab Wrapper for OpenNI 2.2},
     author = {Camillo Taylor},
@@ -191,7 +199,7 @@ doi={10.1109/IEMBS.1994.412057},}
 @online{
     afbff,
     title = {Facts and Figures about issues around sight loss},
-    url = {https://www.actionforblindpeople.org.uk/about-us/media-centre/facts-and-figures-about-issues-around-sight-loss/},
+    url = {https://goo.gl/YH5vBr},
     year = 2006,
     urldate = {2015-04-25}
 }
@@ -324,7 +332,7 @@ doi={10.1109/ICTTA.2006.1684482},}
     urldate = {2015-04-26}
 }
 
-@article{dawkins1996blind,
+@book{dawkins1996blind,
   title={The Blind Watchmaker: Why The Evidence Of Evolution Reveals A Universe Without Design Author: Richard Dawkins, Publisher},
   author={Dawkins, Richard},
   year={1996},
@@ -332,7 +340,7 @@ doi={10.1109/ICTTA.2006.1684482},}
 }
 
 @article{striem2013neuroplasticity,
-  title={NEUROPLASTICITY IN THE BLIND AND SENSORY SUBSTITUTION FOR VISION},
+  title = {Neurplasticity in the blind and sensory substitution for vision},
   author={Striem-Amit, Ella},
   year={2013}
 }
